wandb/run-20230311_112930-1ceryova/files/output.log
[34m[1mwandb[39m[22m: Ctrl + C detected. Stopping sweep.
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent d20wwmxm during agentHeartbeat (<Response [404]>)
Exception in thread Thread-40 (_heartbeat):
Traceback (most recent call last):
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 242, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/transport/requests.py", line 39, in execute
    request.raise_for_status()
  File "/opt/homebrew/lib/python3.10/site-packages/requests/models.py", line 1021, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2119, in agent_heartbeat
    response = self.gql(
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 214, in gql
    ret = self._retry_gql(
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/util.py", line 1031, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access cs22m031/CS6910_DL_assignment_1/1ceryova
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_2/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_2/Frameworks/Python.framework/Versions/3.10/lib/python3.10/threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/agents/pyagent.py", line 166, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/apis/internal.py", line 144, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "/opt/homebrew/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2130, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_2/Frameworks/Python.framework/Versions/3.10/lib/python3.10/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "/opt/homebrew/Cellar/python@3.10/3.10.6_2/Frameworks/Python.framework/Versions/3.10/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access cs22m031/CS6910_DL_assignment_1/1ceryova
                                                                ^
SyntaxError: invalid decimal literal
Error in callback <function _WandbInit._pause_backend at 0x158779900> (for post_run_cell):
wandb: ERROR Dropped streaming file chunk (see wandb/debug-internal.log)
Error in callback <function _WandbInit._resume_backend at 0x158779870> (for pre_run_cell):
Error in callback <function _WandbInit._pause_backend at 0x158779900> (for post_run_cell):